# UGR

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  readme.txt
2º/ED/Prácticas/Ejercicios/: list.cpp
2º/ED/Prácticas/Final/: Final.code-workspace
2º/ED/Prácticas/P1/: P0.md  busqueda_lineal  efic  ejecuciones_desc.csh  ejecuciones_ordenacion.csh  ejercicio_desc.cpp  ordenacion
2º/ED/Prácticas/P2/: racional.tgz
2º/ED/Prácticas/P2/3raya_remoto_grafica/: CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  README  cmake_install.cmake
2º/ED/Prácticas/P2/3raya_remoto_grafica/3raya_autogen/: deps
2º/ED/Prácticas/P2/3raya_remoto_grafica/3raya_autogen/6YEA5652QU/: moc_consola.cpp.d  moc_tablerografico.cpp  moc_tablerografico.cpp.d  moc_ventana.cpp.d
2º/ED/Prácticas/P2/3raya_remoto_grafica/doc_doxygen/html/: annotated.html  classConexion.html  classConsola-members.html  classJuego3Raya-members.html  classJuego3Raya.html  classJugador-members.html  classJugador.html  classMyButton.html  classTablero-members.html  classTablero.html  classTableroGrafico-members.html  classTableroGrafico.html  classTableroGrafico__inherit__graph.dot  classVentana-members.html  classes.html  dir_e68e8157741866f444e17edd764ebbae.html  ficha_8h_source.html  files.html  functions.html  functions_func.html  hierarchy.html  inherit_graph_0.dot  inherit_graph_2.dot  inherit_graph_3.dot  inherit_graph_4.dot  inherit_graph_5.dot  inherit_graph_6.dot  inherits.html  juego_8h_source.html  jugador_8h_source.html  tablero_8h_source.html  tablerografico_8h_source.html  ventana_8h_source.html
2º/ED/Prácticas/P2/3raya_remoto_grafica/doc_doxygen/html/search/: all_2.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  pages_0.js  searchdata.js
2º/ED/Prácticas/P2/3raya_remoto_grafica/include/: juego.h  jugador.h  tablero.h
2º/ED/Prácticas/P2/3raya_remoto_grafica/src/: ficha.cpp  juego.cpp  jugador.cpp  main.cpp  tablero.cpp  tablerografico.cpp
2º/ED/Prácticas/Set y Map/: ejemplo_map.cpp  ejemplo_set.cpp  ejercicio_preparatorio_1_resuelto.cpp
2º/ED/Prácticas/ej01_imagenes/: juez.sh
2º/ED/Prácticas/material/: Makefile  P0.md  ef_teorica_ej1.txt  ejercicio_desc  ordenacion  ordenacion.cpp
2º/ED/Teoría/: ejercicio01.cpp  ejercicio03.cpp  ejercicio12.cpp
2º/ED/Teoría/Bibliografía/: Enlaces para más libros.txt
2º/ED/Teoría/Ejercicios/: R1.odt  ejercicio04.cpp  ejercicio05.cpp  ejercicio08.cpp  ejercicio13.cpp
2º/IA/Apuntes/: Preguntas Tema 3  T3-Preguntas  tests.xopp
2º/IA/Apuntes/Problemas/: T3.xopp  T4.xopp
2º/IA/Apuntes/Tema 1/: T1-Xournal.xopp
2º/IA/Apuntes/Tema 2/: T2.xopp
2º/IA/Apuntes/Tema 5/: T5-Xournal.xopp  T5.xopp
2º/SCD/Prácticas/: P1.rar  wuolah-free-Practica 2. Monitores.rar  wuolah-free-Práctica 3. Implementación de algoritmos distribuidos con MPI_.rar
2º/SCD/Prácticas/Años anteriores/: P4.rar
2º/SCD/Teoría/Bibliografía/: Enlaces para más libros.txt
2º/SCD/Teoría/Ejercicios/: .1.autosave.xopp  1.xopp  2.xopp  T4.xopp
2º/SO/Prácticas/: Ejercicios.xopp
2º/SO/Prácticas/ubuntuSO/: Unattended-322f9b5a-cf2b-4084-9c1e-28f44a910d5c-aux-iso.viso  Unattended-322f9b5a-cf2b-4084-9c1e-28f44a910d5c-grub.cfg  Unattended-322f9b5a-cf2b-4084-9c1e-28f44a910d5c-user-data  Unattended-322f9b5a-cf2b-4084-9c1e-28f44a910d5c-vboxpostinstall.sh  ubuntuSO.vbox  ubuntuSO.vbox-prev  ubuntuSO.vdi
2º/SO/Teoría/Apuntes/: Preguntas Tema 4.txt  Preguntas Tema 6.txt
2º/SO/Teoría/Ejercicios/: Preguntas Tema 3.txt  Preguntas Tema 5.txt  Relacion Temas 1 y 2.odt
3º/DDSI/Prácticas/: conexionBD.py
3º/FR/Teoría/: preguntas_teoría_FR.txt
3º/FR/Teoría/Ejercicios/: Encaminamiento.txt
3º/IG/: cubo  cubo.c
3º/IG/Prácticas/: Luque Jiménez, Mauricio - Convocatoria extraordinaria.odt
3º/IG/Prácticas (copia)/p2/: Makefile  modelo.h
3º/IG/Prácticas (copia)/p3/: modelo.c  modelo.h
3º/IG/Prácticas (copia)/p4/: entradaTeclado.c
3º/IG/Prácticas (copia)/p5/: modelo.c
3º/IG/Prácticas (copia)/p6/: Makefile  mouse.c
3º/IG/Prácticas/p2/: entradaTeclado.c  entradaTeclado.h  file_ply_stl.cc  modelo.c  practicasIG  practicasIG.c  practicasIG.h
3º/IG/Prácticas/p3/: modelo.c  mouse.c  practicasIG  practicasIG.h
3º/IG/Prácticas/p4/: modelo.c  modelo.h  mouse.c  practicasIG  visual.h
3º/IG/Prácticas/p5/: modelo.h  mouse.c  practicasIG
3º/IG/Prácticas/p6/: entradaTeclado.c  modelo.c  practicasIG  practicasIG.h
3º/IG/Prácticas/practicas/: entradaTeclado.c  file_ply_stl.cc  file_ply_stl.h  modelo.c  (+7 more)
3º/IG/Teoría/: cubo.c
3º/IG/practicas/: practicasIG.c
3º/MC/: Práctica Relación 4.odt  Práctica Relación 5.odt
3º/PW/apuntes y ejercicios/: 04-08.php  05-13.js  05-20_1.html  05-20_2.html
3º/PW/pe2/: index.php
4º/BDD/: creación de tablas.sql  disparadores.sql  notas practicas.txt  procedimientos.sql  vistas.sql
4º/BDD/Prácticas/: consultas.sql  disparadores_compilados.sql  disparadores_ext.sql  disparadores_extraordinaria.sql  inserción de datos.sql  permisos.sql  procedimientos_compilados.sql
4º/IN/Prácticas/: .~lock.P1.odt#  P1.odt
4º/IN/Teoría/: Kahoot Segundo Parcial.txt  XGBoost vs LightGBM.odt
4º/PDIH/: README.md
4º/PDIH/P3/: P3.md
4º/PDIH/P4/: P4.md
4º/PDIH/P5/: P5.md
4º/PDIH/S-arduino/: S-arduino.md
4º/PDIH/S2/: S2.md
4º/PDIH/trabajo/: trabajo.md
4º/RI/Práctica 2/: Ejercicio2.csv  ejercicio1.txt
4º/RI/Práctica 5/: p5.java
4º/RSC/: P2-T5.odt
4º/RSC/P1/: Proyecto Gephi.gephi
4º/RSC/P4/: MedidasRedesPractica4.xlsx
Pagos y cosas generales/2025-2026/: horario.ods
data/: diccionario_30000.txt  diccionario_40000.txt
doc/: mainpage.dox
include/: dictionary.h  letters_bag.h  letters_set.h  solver.h
src/: cantidad_letras.cpp  cifras.cpp  dictionary.cpp  letras.cpp  letters_bag.cpp  letters_set.cpp  solver.cpp  testdiccionario.cpp
(+2228 files in other folders)
